--- a/public/cuestionario/privado/index.html
+++ b/public/cuestionario/privado/index.html
@@ -107,10 +107,10 @@
                             </div>
                         </label>
                         <label class="block cursor-pointer">
-                            <input type="radio" name="tramite" value="sucesion" class="peer sr-only">
+                            <input type="radio" name="tramite" value="testamentos" class="peer sr-only">
                             <div class="border rounded-lg p-4 h-full transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background">
-                                <p class="text-sm font-semibold text-foreground">Sucesión</p>
-                                <p class="text-xs text-muted-foreground mt-1">Regularización de herencias.</p>
+                                <p class="text-sm font-semibold text-foreground">Testamentos</p>
+                                <p class="text-xs text-muted-foreground mt-1">Redacción y trámite de testamentos.</p>
                             </div>
                         </label>
                         <label class="block cursor-pointer">
