--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -229,32 +229,16 @@
                                         <span>Divorcio</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="pension_alimenticia" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Pensión alimenticia</span>
-                                    </label>
-                                    <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="sucesion" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Sucesión</span>
-                                    </label>
-                                    <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="notariado" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Notariado</span>
-                                    </label>
-                                    <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="testamento" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Testamento</span>
-                                    </label>
-                                    <label class="flex items-center gap-2 text-sm text-foreground">
                                         <input type="checkbox" name="tramites" value="traspaso" class="h-4 w-4 text-primary border-input rounded">
                                         <span>Traspaso de bienes</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="contrato" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Contrato</span>
+                                        <input type="checkbox" name="tramites" value="testamentos" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Testamentos</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="otro" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Otro</span>
+                                        <input type="checkbox" name="tramites" value="otros" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Otros</span>
                                     </label>
                                 </div>
                             </div>
