--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -71,14 +71,14 @@
         <div id="alert" class="hidden p-4 mb-4 text-sm rounded-lg" role="alert"></div>
 
         <div class="bg-card text-card-foreground rounded-xl border shadow-lg">
-            <div class="p-4 md:p-6">
+            <div id="questionnaireHeader" class="p-4 md:p-6">
                 <div class="text-center space-y-1">
                     <p class="text-xs font-semibold tracking-wide text-primary uppercase">Paso a paso</p>
                     <h1 class="text-2xl md:text-3xl font-headline font-bold text-primary">Cuestionario Público</h1>
                     <p class="text-muted-foreground text-sm md:text-base">Queremos entender mejor tu necesidad. Son 4 pasos rápidos.</p>
                 </div>
 
-                
+
                 <div class="mt-6">
                     <div class="flex items-center gap-3">
                         <div class="flex-1 h-2 rounded-full bg-secondary" aria-hidden="true">
@@ -1131,7 +1131,9 @@
                 const data = await response.json();
 
                 if (data.completed) {
-                    // Ocultar formulario y mostrar mensaje
+                    // Ocultar header y formulario, mostrar solo mensaje
+                    const header = document.getElementById('questionnaireHeader');
+                    if (header) header.style.display = 'none';
                     document.getElementById('questionnaireForm').innerHTML = `
                         <div class="text-center p-8">
                             <svg class="mx-auto h-16 w-16 text-green-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -1142,7 +1144,6 @@
                             <p class="text-sm text-muted-foreground">Si necesitas actualizar tu información, por favor contacta a nuestro equipo.</p>
                         </div>
                     `;
-                    document.querySelector('.max-w-2xl.mx-auto.bg-card').classList.add('shadow-lg');
                 }
             } catch (error) {
                 console.error('Error verificando estado del cuestionario:', error);
