--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -237,7 +237,7 @@
 
                 <div class="pt-2">
                      <button type="submit" id="submitBtn" class="w-full inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">
-                        Registrar Lead
+                        Registrarme
                     </button>
                 </div>
             </form>
@@ -928,7 +928,7 @@
                 showAlert('Error de conexión. Intente nuevamente.', 'error');
             } finally {
                 submitBtn.disabled = false;
-                submitBtn.textContent = 'Registrar Lead';
+                submitBtn.textContent = 'Registrarme';
             }
         });
     </script>
