--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -254,7 +254,7 @@
                 </svg>
             </div>
             <h2 class="text-xl font-headline font-bold text-foreground mb-2">Registro Exitoso</h2>
-            <p class="text-muted-foreground mb-6">Pronto nos comunicaremos con usted, revise su WhatsApp y correo.</p>
+            <p class="text-muted-foreground mb-6">Pronto nos comunicaremos con usted, revise su WhatsApp.</p>
             <button onclick="closeSuccessDialog()" class="w-full inline-flex items-center justify-center rounded-md text-sm font-medium bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">
                 Entendido
             </button>
