--- a/public/cuestionario/pensionados/index.html
+++ b/public/cuestionario/pensionados/index.html
@@ -112,7 +112,7 @@
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
                             <label class="block text-sm font-medium text-foreground mb-1">Monto mensual de pensión (neto) *</label>
-                            <input type="number" name="pension_neta" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="Ej: 450000" min="0">
+                            <input type="text" name="pension_neta" inputmode="numeric" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="₡450,000">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-foreground mb-1">Rango de edad *</label>
@@ -185,7 +185,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-foreground mb-1">Deducciones mensuales actuales</label>
-                            <input type="number" name="deducciones" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="Ej: 120000" min="0">
+                            <input type="text" name="deducciones" inputmode="numeric" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="₡120,000">
                         </div>
                     </div>
                     <div>
@@ -452,14 +452,14 @@
             return {
                 entidad: document.querySelector('select[name="entidad"]').value,
                 antiguedad: document.querySelector('select[name="antiguedad"]').value,
-                pension_neta: document.querySelector('input[name="pension_neta"]').value.trim(),
+                pension_neta: getRawNumber(document.querySelector('input[name="pension_neta"]').value),
                 rango_edad: document.querySelector('select[name="rango_edad"]').value,
                 tiene_deudas: document.querySelector('select[name="tiene_deudas"]').value,
                 estado_civil: document.querySelector('select[name="estado_civil"]').value,
                 monto: document.querySelector('select[name="monto"]').value,
                 plazo: document.querySelector('select[name="plazo"]').value,
                 destino: document.querySelector('select[name="destino"]').value,
-                deducciones: document.querySelector('input[name="deducciones"]').value.trim(),
+                deducciones: getRawNumber(document.querySelector('input[name="deducciones"]').value),
                 detalle: document.querySelector('textarea[name="detalle"]').value,
                 experiencia_crediticia: document.querySelector('select[name="experiencia_crediticia"]').value,
                 historial_mora: document.querySelector('select[name="historial_mora"]').value,
@@ -626,9 +626,27 @@
             }
         }
 
+        // Formato de colones con separador de miles
+        function formatColones(value) {
+            const num = value.replace(/[^0-9]/g, '');
+            if (!num) return '';
+            return '₡' + parseInt(num).toLocaleString('es-CR');
+        }
+        function getRawNumber(value) {
+            return value.replace(/[^0-9]/g, '');
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
             checkQuestionnaireStatus();
             showStep(currentStep);
+
+            // Formatear campos de montos con colones
+            document.querySelectorAll('input[name="pension_neta"], input[name="deducciones"]').forEach(input => {
+                input.addEventListener('input', function() {
+                    const raw = getRawNumber(this.value);
+                    this.value = raw ? formatColones(raw) : '';
+                });
+            });
             document.getElementById('backBtn').addEventListener('click', () => {
                 if (currentStep > 0) {
                     currentStep -= 1;
