--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -189,6 +189,17 @@
                         </div>
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
+                                <label class="block text-sm font-medium text-foreground mb-1">Rango de ingreso mensual *</label>
+                                <select name="ingreso" id="ingresoSelect" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                    <option value="">Seleccione</option>
+                                    <option value="<300k">Menor a ₡300,000</option>
+                                    <option value="300k-500k">₡300,000 - ₡500,000</option>
+                                    <option value="500k-800k">₡500,000 - ₡800,000</option>
+                                    <option value="800k-1.2m">₡800,000 - ₡1,200,000</option>
+                                    <option value=">1.2m">Más de ₡1,200,000</option>
+                                </select>
+                            </div>
+                            <div>
                                 <label class="block text-sm font-medium text-foreground mb-1">Salario exacto (₡) *</label>
                                 <input type="text" name="salario_exacto" id="salarioExacto" placeholder="Ej: 450000" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <p id="salarioError" class="text-xs text-red-500 mt-1 hidden">El salario debe estar dentro del rango seleccionado</p>
