--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -189,20 +189,8 @@
                         </div>
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Rango de ingreso mensual *</label>
-                                <select name="ingreso" id="ingresoSelect" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
-                                    <option value="">Seleccione</option>
-                                    <option value="<300k">Menor a ₡300,000</option>
-                                    <option value="300k-500k">₡300,000 - ₡500,000</option>
-                                    <option value="500k-800k">₡500,000 - ₡800,000</option>
-                                    <option value="800k-1.2m">₡800,000 - ₡1,200,000</option>
-                                    <option value=">1.2m">Más de ₡1,200,000</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Salario exacto (₡) *</label>
-                                <input type="text" name="salario_exacto" id="salarioExacto" placeholder="Ej: 450000" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
-                                <p id="salarioError" class="text-xs text-red-500 mt-1 hidden">El salario debe estar dentro del rango seleccionado</p>
+                                <label class="block text-sm font-medium text-foreground mb-1">Salario Bruto *</label>
+                                <input type="text" name="salario_exacto" id="salarioExacto" placeholder="Ej: ₡450,000" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                             </div>
                         </div>
                         <div class="grid md:grid-cols-2 gap-4">
@@ -524,14 +512,6 @@
         }
 
         // Rangos de salario para validación
-        const rangosIngreso = {
-            '<300k': { min: 0, max: 299999 },
-            '300k-500k': { min: 300000, max: 500000 },
-            '500k-800k': { min: 500000, max: 800000 },
-            '800k-1.2m': { min: 800000, max: 1200000 },
-            '>1.2m': { min: 1200001, max: Infinity }
-        };
-
         function updateMontoOptions() {
             const tipoCredito = document.querySelector('input[name="tipo_credito"]:checked')?.value;
             const montoSelect = document.getElementById('montoSelect');
@@ -574,31 +554,6 @@
             const numericValue = value.replace(/[^0-9]/g, '');
             // Formato con comas
             return numericValue.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
-        }
-
-        function validateSalario() {
-            const ingresoSelect = document.getElementById('ingresoSelect');
-            const salarioInput = document.getElementById('salarioExacto');
-            const errorEl = document.getElementById('salarioError');
-            const rangoKey = ingresoSelect.value;
-            const salarioRaw = salarioInput.value.replace(/[^0-9]/g, '');
-            const salario = parseInt(salarioRaw) || 0;
-
-            if (!rangoKey || !salarioRaw) {
-                errorEl.classList.add('hidden');
-                return true;
-            }
-
-            const rango = rangosIngreso[rangoKey];
-            if (salario < rango.min || salario > rango.max) {
-                errorEl.classList.remove('hidden');
-                salarioInput.classList.add('border-red-500');
-                return false;
-            } else {
-                errorEl.classList.add('hidden');
-                salarioInput.classList.remove('border-red-500');
-                return true;
-            }
         }
 
         function updateDynamicBlocks() {
@@ -692,19 +647,14 @@
                     const monto = document.querySelector('select[name="monto"]').value;
                     const uso = document.querySelector('select[name="uso_credito"]').value;
                     const institucion = document.getElementById('institucionValue').value;
-                    const ingreso = document.getElementById('ingresoSelect').value;
                     const salario = document.getElementById('salarioExacto').value.replace(/[^0-9]/g, '');
 
                     if (!tipoCredito) {
                         showAlert('Selecciona el tipo de crédito (Microcrédito o Regular).');
                         return false;
                     }
-                    if (!monto || !uso || !institucion || !ingreso || !salario) {
+                    if (!monto || !uso || !institucion || !salario) {
                         showAlert('Completa todos los datos de crédito.');
-                        return false;
-                    }
-                    if (!validateSalario()) {
-                        showAlert('El salario debe estar dentro del rango de ingreso seleccionado.');
                         return false;
                     }
                 }
@@ -738,7 +688,6 @@
                 data.monto = document.querySelector('select[name="monto"]').value;
                 data.uso_credito = document.querySelector('select[name="uso_credito"]').value;
                 data.institucion_labora = document.getElementById('institucionValue').value;
-                data.ingreso = document.getElementById('ingresoSelect').value;
                 data.salario_exacto = document.getElementById('salarioExacto').value.replace(/[^0-9]/g, '');
                 data.tiene_deudas = document.querySelector('select[name="tiene_deudas"]').value;
             }
@@ -876,11 +825,14 @@
         }
 
         function checkSalarioBajo() {
-            const ingresoSelect = document.getElementById('ingresoSelect');
+            const salarioExacto = document.getElementById('salarioExacto');
             const interes = document.querySelector('input[name="interes"]:checked')?.value;
 
-            // Solo verificar si el interés incluye crédito
-            if ((interes === 'credito' || interes === 'ambos') && ingresoSelect.value === '<300k') {
+            // Obtener valor numérico del salario
+            const salarioValue = parseInt(salarioExacto.value.replace(/[^0-9]/g, ''));
+
+            // Solo verificar si el interés incluye crédito y el salario es menor a 300,000
+            if ((interes === 'credito' || interes === 'ambos') && salarioValue < 300000) {
                 showSalarioBajoDialog();
                 return true;
             }
@@ -960,8 +912,15 @@
                 validateSalario();
             });
             // Rango de ingreso - validar salario y verificar salario bajo
-            document.getElementById('ingresoSelect').addEventListener('change', () => {
-                validateSalario();
+            // Event listener para formatear salario con comas
+            const salarioInput = document.getElementById('salarioExacto');
+            salarioInput.addEventListener('input', (e) => {
+                const formatted = formatSalario(e.target.value);
+                e.target.value = formatted;
+            });
+
+            // Event listener para verificar salario bajo cuando cambia el salario
+            salarioInput.addEventListener('blur', () => {
                 checkSalarioBajo();
             });
             // Institución dropdown event listeners
