feat: agregar mensajes de seguridad y campos requeridos en formularios de cuestionarios

--- a/public/cuestionario/pensionados/index.html
+++ b/public/cuestionario/pensionados/index.html
@@ -88,6 +88,7 @@
             </div>
 
             <form id="questionnaireForm" class="p-4 md:p-6 pt-0 space-y-6">
+                <p class="text-xs text-muted-foreground italic">* Campos requeridos</p>
                 <div id="step-1" class="space-y-4">
                     <h2 class="text-lg font-semibold text-foreground">1. Perfil de pensión</h2>
                     <div class="grid md:grid-cols-2 gap-4">
@@ -228,6 +229,11 @@
                             <option value="publicidad">Publicidad</option>
                             <option value="otro">Otro</option>
                         </select>
+                    </div>
+                    <div class="mt-4 p-3 bg-muted/50 rounded-md border border-muted">
+                        <p class="text-xs text-muted-foreground">
+                            🔒 Tu información está segura y protegida. Cumplimos con la Ley de Protección de Datos Personales y toda la información será tratada de forma confidencial.
+                        </p>
                     </div>
                 </div>
 
