feat: actualizar URLs de API y frontend a dinámicas basadas en el origen de la ventana

--- a/public/registro/index.html
+++ b/public/registro/index.html
@@ -272,8 +272,8 @@
     </style>
 
     <script>
-        const API_BASE_URL = 'https://backend.pep.cr';
-        const FRONTEND_URL = 'https://nuevo.pep.cr';
+        const API_BASE_URL = window.location.origin;
+        const FRONTEND_URL = window.location.origin;
         const TSE_API_URL = 'https://www.dsf.cr/tse/';
         const EVOLUTION_API_URL = 'https://evolution.ssc.cr';
         const EVOLUTION_API_KEY = '7E269F8C445B-4D63-B75B-BB59D7481AC7';
